# tale_of_years

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml  setup.py
.scratch/annals-ui/: spec.md  wishlist.md
.scratch/annals-ui/issues/: 01-rich-annals-rows.md  02-event-click-to-map.md  03-event-dossier.md  04-category-filter-chips.md
.scratch/arda-history-v1/: map.md  spec.md
.scratch/arda-history-v1/issues/: 01-spatial-substrate.md  02-core-entity-tick-model.md  03-research-canonical-2965-state.md  04-research-python-rendering-stack.md  05-character-dynasty-system.md  06-faction-territory-system.md  07-war-battle-system.md  (+5 more)
.scratch/inspection-ui/: spec.md
.scratch/map-visuals/: spec.md
docs/: war-tuning-baseline.md
docs/adr/: 0001-tile-substrate-and-render.md  0002-factions-and-territory.md  0003-monthly-tick-clock.md  0004-grid-reachable-via-world.md  0005-disposition-decays-to-frozen-baseline.md  0006-war-conquest-and-razing.md  0007-built-map-is-persisted-run-state.md  0008-the-one-ring-as-a-single-artifact-with-an-xor-invariant.md  0009-muster-is-an-occasional-coalition-hosting.md  0010-canon-pressure-is-soft-weighting-only.md  0011-divergence-weighting-a-corrupt-bearer-falls-to-the-shadow.md  0012-war-is-gated-by-provocation-and-readiness.md  0013-concurrent-hosts-concentrate-then-spread.md  0014-the-codex-ui.md  0015-characters-journey-and-the-ring-is-found-physically.md  0016-the-hunt-is-unlocked-by-strength-not-pull.md
docs/agents/: issue-tracker.md  map.md
src/arda_sim/: __init__.py  armies.py  characters.py  chronicle.py  diplomacy.py  driver.py  economy.py  entities.py  factions.py  journeys.py  metrics.py  naming.py  persistence.py  pipeline.py  playback.py  playtest.py  ring.py  rng.py  sauron.py  snapshot.py  succession.py  tiles.py  validate.py  war.py  world.py
tests/: test_armies.py  test_characters.py  test_chronicle.py  test_codex.py  test_codex_pages.py  test_core.py  test_determinism.py  test_diplomacy.py  test_driver.py  test_economy.py  test_factions.py  test_journeys.py  test_metrics.py  test_naming.py  test_packaging.py  test_persistence.py  test_playback.py  test_playtest.py  test_ring.py  test_ring_seeker.py  test_sauron.py  test_substrate.py  test_succession.py  test_tile_render.py  test_tiles.py  test_ui_shell.py  test_war.py
tools/authoring/: gen_substrate.py  preview_png.py
(+30 files in other folders)
