[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arda_sim"
version = "0.1.0"
description = "Emergent Middle-earth history simulator — seeded, deterministic sim core (v1 walking skeleton)."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
ui = ["PySide6>=6.5"]
dev = ["pytest>=7", "PySide6>=6.5"]

[project.scripts]
arda-sim = "arda_sim.driver:main"
arda-sim-ui = "arda_sim.ui.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
