[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arda_sim"
version = "0.1.0"
description = "Emergent Middle-earth history simulator — seeded, deterministic sim core (v1 walking skeleton)."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
ui = ["PySide6>=6.5"]
dev = ["pytest>=7", "pytest-xdist>=3", "PySide6>=6.5"]

[project.scripts]
arda-sim = "arda_sim.driver:main"
arda-sim-ui = "arda_sim.ui.app:main"
arda-playtest = "arda_sim.playtest:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arda_sim = ["scenarios/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Run the suite in parallel across all cores (pytest-xdist). The tests are
# independent and the slow ones each seed the full grid and run the sim for
# years, so fanning them out cuts wall-clock several-fold. Requires the `dev`
# extra (pytest-xdist); override with `-n0` to run serially (e.g. for --pdb).
addopts = "-n auto"
